--- a/main.css
+++ b/main.css
@@ -340,3 +340,30 @@ body {
     padding: 8px;
     box-sizing: border-box;
 }
+
+/* Слайдер */
+.service-card {
+    padding: 20px;
+    background-color: #f8f9fa;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+.service-card h3 {
+    margin-top: 10px;
+    font-size: 18px;
+}
+.service-card p {
+    margin-top: 10px;
+    font-size: 16px;
+}
+
+.confetti {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+}
